[package]
name = "speech-encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speech-backend-common = { git = "https://github.com/usmonie/speech-backend-common" }

e521_curve = { git = "https://github.com/usmonie/e521_curve" }
enigma = { git = "https://github.com/Speech-W-Team/enigma" }

aes = "0.8.2"
cbc = "0.1.2"
#cbc = { git = "https://github.com/RustCrypto/block-modes" }


async-trait = "0.1.68"
num = "0.4.0"
num-bigint = "0.4.3"
rand = "0.8.5"